--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -4,113 +4,119 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="..//css/styles.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/mediaQueries.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  	<link rel="stylesheet" href="css/styles.css">
+  	<link rel="stylesheet" href="css/mediaQueries.css">
 	<title>Servicios</title>
 </head>
 <body>
-	<header class="header">
-	  <nav class="navbar">
-	    <a class="bothome" href="..//index.html"><img src="..//imagenes/joculog.png" class="logo"></a>
-	      <ul class="menu" id="menu">
-	        <li><a  href="..//paginas/quienes-somos.html">Quienes somos</a></li>
-	        <li><a href="..//paginas/servicios.html">Servicios</a></li>
-	        <li><a href="..//paginas/portfolio.html">Productos</a></li>
-	        <li><a href="..//paginas/contacto.html">Contactanos</a></li>
-	      </ul>
-	  </nav>
-	</header>
+	<div class="container-fluid">
+		<div class="row">
+	      <header class="header col-12">
+	        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+	          <div class="container-fluid">
+	            <a class="navbar-brand" href="..//index.html">Jocu</a>
+	            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	              <span class="navbar-toggler-icon"></span>
+	            </button>
+	            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	              <div class="navbar-nav">
+	                <a class="nav-link active" aria-current="page" href="..//paginas/quienes-somos.html">Quienes somos</a>
+	                <a class="nav-link" href="..//paginas/servicios.html">Servicios</a>
+	                <a class="nav-link" href="..//paginas/portfolio.html">Portfolio</a>
+	                <a class="nav-link" href="..//paginas/contacto.html">Contacto</a>
+	              </div>
+	            </div>
+	          </div>
+	        </nav>
+	      </header>
+	    </div>  
 
-	<div class="respmenu">
-	  <input type="checkbox">
-	  <i class="fas fa-bars"></i>
-	  <i class="fas fa-times"></i>
-	  <nav>
-	    <ul>
-	      <li><a  href="..//paginas/quienes-somos.html">Quienes somos</a></li>
-	      <li><a href="..//paginas/servicios.html">Servicios</a></li>
-	      <li><a href="..//paginas/portfolio.html">Productos</a></li>
-	      <li><a href="..//paginas/contacto.html">Contactanos</a></li>
-	    </ul>
-	  </nav>
- 	</div>
+	    <div class="row justify-content-center text-center">
+			<div class="serviciosmain col-8">
+				<h1 class="servicios__titulo">Servicios</h1>
 
-
-	<div class="serviciosmain">
-		<h1 class="servicios__titulo">Servicios</h1>
-
-		<div class="servicios__texto">
-			<p>Hace click y descubri que ofrecemos en cada uno de nuestros servicios.</p>
-		</div>
-
-			<div class="servicios__navstand">
-				<div class="servicios__nombre">
-					<h2>Diseño de Stands</h2>
+				<div class="servicios__texto">
+					<p>Hace click y descubri que ofrecemos en cada uno de nuestros servicios.</p>
 				</div>
-				<div class="servicios__info">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
-				</div>
-			</div>
 
-			<div class="servicios__navproductos">
-				<div class="servicios__nombre">
-					<h2>Diseño de Productos</h2>
-				</div>
-				<div class="servicios__info">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
-				</div>
-			</div>
+					<div class="servicios__navstand">
+						<div class="servicios__nombre">
+							<h2>Diseño de Stands</h2>
+						</div>
+						<div class="servicios__info">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur.</p>
+						</div>
+					</div>
 
-			<div class="servicios__navinteriores">
-				<div class="servicios__nombre">
-					<h2>Diseño de Interiores</h2>
-				</div>
-				<div class="servicios__info">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
-				</div>
-			</div>
+					<div class="servicios__navproductos">
+						<div class="servicios__nombre">
+							<h2>Diseño de Productos</h2>
+						</div>
+						<div class="servicios__info">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur.</p>
+						</div>
+					</div>
 
-			<div class="servicios__navgrafico">
-				<div class="servicios__nombre">
-					<h2>Diseño Gráfico</h2>
-				</div>
-				<div class="servicios__info">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
+					<div class="servicios__navinteriores">
+						<div class="servicios__nombre">
+							<h2>Diseño de Interiores</h2>
+						</div>
+						<div class="servicios__info">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur.</p>
+						</div>
+					</div>
+
+					<div class="servicios__navgrafico">
+						<div class="servicios__nombre">
+							<h2>Diseño Gráfico</h2>
+						</div>
+						<div class="servicios__info">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur.</p>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
 
-	<div class="footer">
-    <div class="numero">
-      <h3>+5491153242483</h3>
-    </div> 
-    <h2>JOCU DESIGN</h2>
-    <div class="social-network">
-      <i class="fab fa-twitter"></i>
-      <i class="fab fa-facebook-f"></i>
-      <i class="fab fa-instagram"></i>
-    </div>
-  </div>	
+	<div class="row justify-content-center">
+	    <div class="col order-first text-center">
+	      +5491153242483
+	    </div>
+	    <div class="col text-center">
+	      JOCU DESIGN
+	    </div>
+	    <div class="col order-last text-center">
+	      <i class="fab fa-twitter"></i>
+		    <i class="fab fa-facebook-f"></i>
+		    <i class="fab fa-instagram"></i>
+	    </div>
+	  </div>
+	</div> 
+
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>	
 </body>
 </html>
